Added  my changes and updated to latest version.

--- a/templates/_base.htm
+++ b/templates/_base.htm
@@ -20,10 +20,8 @@
 			<link rel="stylesheet" href="css/skel.css" />
 			<link rel="stylesheet" href="css/style.css" />
 			<link rel="stylesheet" href="css/style-wide.css" />
-			
 		</noscript>
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-
+		
 		<!--CKEDITOR-->
 		<!--<script src="../ckeditor.js"></script>-->
 		<script src="http://cdn.ckeditor.com/4.4.5/standard-all/ckeditor.js"></script>
@@ -38,24 +36,7 @@
 		
 		<script type="text/javascript" language="javascript" src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 		<script type="text/javascript" language="javascript" src="//cdn.datatables.net/1.10.3/js/jquery.dataTables.min.js"></script>
-		<script type="text/javascript">
-		function proceed(){
-				if(confirm("Do you want to proceed with the submission?")==false){
-					return false;
-				}
-			}
-		
-			$(document).ready(function(){ 
-				$("input[name=inputSubject]").change(function() {
-        			$("#shoeOptions").hide();
-        			
-    			}); 
-    			$("input[id=shoes]").change(function() {
-        			$("#shoeOptions").show();
-    			}); 
-
-			});
-		</script>
+		<link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.3/css/jquery.dataTables.css">
 		
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 	</head>
@@ -100,13 +81,11 @@
 			  {% block bodycontent %}
 			  {% endblock %}
 			</div>
-			
-
-				<!-- Footer -->
+			<!-- Footer -->
 			<div id="footer">
 				<div class="container">
 					<div class="row ">
-						<div class="6u">
+						<div class="6u" style="width:100%;">
 							<div class="row collapse-at-2">
 								<section class="6u">
 									<h3>Links</h3>
@@ -131,46 +110,10 @@
 				
 							</div>
 						</div>
-						<section class="6u">
-							<h3>Get In Touch</h3>
-							<form  action="/contact_mail" method = "post" onsubmit="return proceed()">
-								<div class="row half collapse-at-2">
-									<div class="6u">
-										Subject:<p>
-										<input type="radio" name="inputSubject" id="inputSubject" value="Appointment" required/>Appointment
-										<input type="radio" name="inputSubject" id="shoes" value="Shoes" />Shoes
-											<div id="shoeOptions" style="display: none">
-												Gender
-												<select name="gender">
-												  <option value="M" >M</option>
-												  <option value="F">F</option>
-												</select>
-												Size
-												<select name="size">
-												  <option value="5" >5</option>
-												  <option value="6" >6</option>
-												  <option value="7" >7</option>
-												  <option value="8" >8</option>
-												  <option value="9">9</option>
-												  <option value="10">10</option>
-												</select>
-											</div>
-										<input type="radio" name="inputSubject" id="inputSubject" value="Lessons" />Lessons
-										<input type="radio" name="inputSubject" id="inputSubject" value="Other" />Other
-										<input type="text" name="inputName" id="name" placeholder="Name" required/>
-										<input type="text" name="inputPhone" id="phone" placeholder="Phone" required/>
-										<input type="email" name="inputEmail" id="inputEmail" placeholder="Email" required/>
-										<textarea name="inputMessage" id="inputMessage" placeholder="Message" rows="5" required></textarea>
-										<input type="submit" class="button alt" value="Send Message" />
-								</div>
-								
-									
-								
-							</form>
-						</section>
 					</div>
 				</div>
 
+				
 				
 				
 				
